# rafael_septava_web-portofolio

./: Cargo.toml  Trunk.toml  index.html  yew_app-785a18aea14e1978_bg.wasm  yew_app-90211cc74a197b5f.js  yew_app-952d68fd5ed932a8.js
src/: lib.rs  style.css
src/components/atoms/: goals.rs  hard_skills.rs  interest.rs  mod.rs  profile.rs  soft_skills.rs  title.rs
