[package]
name = "yew_app"
version = "0.1.0"
edition = "2024"

[build]
public_url = "/rafael_septava_web-portofolio/"

[dependencies]
yew = { version = "0.23.0", features = ["csr"] }
gloo = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stylist = { version = "0.15.1", features = ["yew", "parser"] }